Use URL object instead of URI object to parse URL fields